<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">消防维保系统</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录系统</string>
    <string name="action_sign_in_short">登录</string>

    <string name="error_invalid_username">用户名无效</string>
    <string name="error_invalid_password">密码长度不够</string>
    <string name="error_incorrect_password">密码无效</string>
    <string name="error_field_required">必填项</string>

    <string name="title_activity_login">登录</string>
    <string name="title_activity_actionbar">消防维保</string>
    <string name="action_apply">提交审核</string>
    <string name="action_settings">设置</string>
    <string name="tab_title_todo">未结束</string>
    <string name="tab_title_audit">待审核</string>
    <string name="title_item_maintain">维保任务明细</string>
    <string name="title_item_check">检查任务明细</string>
    <string name="tab_title_detail_task">维修任务</string>
    <string name="tab_title_detail_check">检查任务</string>
    <string name="tab_title_detail_worklog">工作记录</string>
    <string name="tab_title_detail_item">部件状态</string>
    <string name="tab_title_detail_plan">检查计划</string>
    <string name="save">保存</string>
    <string name="logout">退出</string>
    <string name="logout_summary">退出账户</string>
    <string name="field_task_status">任务状态</string>
    <string name="field_task_reason">审核意见</string>
    <string name="field_task_manager_name">联系人</string>
    <string name="field_task_manager_tel">联系电话</string>
    <string name="field_work_title">标题</string>
    <string name="tab_title_workhour">工作时间</string>
    <string name="field_work_memo">详细描述</string>

    <string name="field_item_center">中心</string>
    <string name="field_item_company">单位</string>
    <string name="field_item_company_address">单位地址</string>
    <string name="field_item_float">所属楼层</string>
    <string name="field_item_address">安装地址</string>
    <string name="field_item_no">企业编码</string>
    <string name="field_item_category">部件类型</string>
    <string name="field_item_type">部件型号</string>
    <string name="field_item_report_date">报修时间</string>
    <string name="field_item_content">故障内容</string>
    <string name="field_item_send_date">派单时间</string>
    <string name="field_item_end_date">结束时间</string>
    <string name="field_item_system">系统</string>
    <string name="field_item_device">设备</string>
    <string name="field_item_error">故障</string>
    <string name="field_item_resolve">维修措施</string>
    <string name="field_item_maintain_status">维修状态</string>
    <string name="field_item_report_type">报修类型</string>
    <string name="field_item_contact">维修联系人</string>
    <string name="field_item_contact_tel">维修联系人电话</string>
    <string name="field_item_source">报修来源</string>
    <string name="field_item_recieve_no">受理编号</string>
    <string name="field_item_check_no">检查编号</string>
    <string name="field_item_code">部件编码</string>
    <string name="field_item_check_status">检查状态</string>

    <string name="pref_header_data_sync">Account</string>
    <string name="field_task_send_date">派单时间</string>
    <string name="field_task_sender">派单人</string>
    <string name="field_task_company">单位名称</string>
    <string name="field_task_name">任务名称</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="field_workhour_worker">人员姓名</string>
    <string name="field_workhour_spend">计</string>
    <string name="field_workhour_start">开始时间</string>
    <string name="field_workhour_end">结束时间</string>

    <string name="confirm_exit">再按一次，退出程序</string>
    <string name="push">推送</string>
    <string name="progress_title">处理中...</string>
    <string name="progress_message">请耐心等待...</string>
    <string name="data_no_change">没有变化</string>
    <string name="confirm_title">操作确认</string>
    <string name="confirm_delete_message">要执行删除？</string>

    <string name="worklog_apply">正式提交</string>
    <string name="worklog_save_temp">临时保存</string>
    <string name="worklog_add">新增工作记录</string>
    <string name="workhour_add">新增工人工时</string>
    <string name="item_add">新增部件</string>

    <string name="connection_error">通讯失败，请检查网络设置。</string>
    <string name="wifi_and_3g_networks_are_not_available">WIFI和3G网络都不可用。</string>

    <string name="no_data">没有数据</string>
    <string name="validate_not_pass">未通过验证</string>
    <string name="pref_version">版本</string>

</resources>
