<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".check.ItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background_color" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">


            <RelativeLayout
                android:id="@+id/activity_check_item_no_layout"
                style="@style/editable_field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_no" />

                <TextView
                    android:id="@+id/activity_check_item_no"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_no_next" />

                <ImageView
                    android:id="@+id/activity_check_item_no_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_company_layout"
                style="@style/field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_company" />

                <TextView
                    android:id="@+id/activity_check_item_company"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_company_next" />

                <ImageView
                    android:id="@+id/activity_check_item_company_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_company_address_layout"
                style="@style/field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_company_address" />

                <TextView
                    android:id="@+id/activity_check_item_company_address"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_company_address_next" />

                <ImageView
                    android:id="@+id/activity_check_item_company_address_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:visibility="invisible"
                    android:src="@drawable/ic_action_next_item" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_float_layout"
                style="@style/field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_float" />

                <TextView
                    android:id="@+id/activity_check_item_float"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_float_next" />

                <ImageView
                    android:id="@+id/activity_check_item_float_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:visibility="invisible"
                    android:src="@drawable/ic_action_next_item" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_address_layout"
                style="@style/field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_address" />

                <TextView
                    android:id="@+id/activity_check_item_address"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_address_next" />

                <ImageView
                    android:id="@+id/activity_check_item_address_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:visibility="invisible"
                    android:src="@drawable/ic_action_next_item" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_code_layout"
                style="@style/field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_code" />

                <TextView
                    android:id="@+id/activity_check_item_code"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_code_next" />

                <ImageView
                    android:id="@+id/activity_check_item_code_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_category_layout"
                style="@style/field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_category" />

                <TextView
                    android:id="@+id/activity_check_item_category"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_category_next" />

                <ImageView
                    android:id="@+id/activity_check_item_category_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_status_layout"
                style="@style/editable_field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_check_status" />

                <TextView
                    android:id="@+id/activity_check_item_status"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_status_next" />

                <ImageView
                    android:id="@+id/activity_check_item_status_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_system_layout"
                style="@style/editable_field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_system" />

                <TextView
                    android:id="@+id/activity_check_item_system"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_system_next" />

                <ImageView
                    android:id="@+id/activity_check_item_system_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_device_layout"
                style="@style/editable_field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_device" />

                <TextView
                    android:id="@+id/activity_check_item_device"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_device_next" />

                <ImageView
                    android:id="@+id/activity_check_item_device_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_error_layout"
                style="@style/editable_field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/field_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_item_error" />

                <TextView
                    android:id="@+id/activity_check_item_error"
                    style="@style/field_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_error_next" />

                <ImageView
                    android:id="@+id/activity_check_item_error_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_check_item_content_layout"
                style="@style/editable_field_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/activity_check_item_content_next"
                    android:orientation="vertical">

                    <TextView
                        style="@style/field_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_item_content" />

                    <TextView
                        android:id="@+id/activity_check_item_content"
                        style="@style/field_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/activity_check_item_content_next"
                    android:layout_width="18dp"
                    android:layout_height="18dp"

                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_next_item" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
