<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_detail_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fragment_detail_task_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_detail_task_manager_name_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_task_manager_name" />

        <TextView
            android:id="@+id/fragment_detail_task_manager_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/fragment_detail_task_manager_name_next" />


        <ImageView
            android:id="@+id/fragment_detail_task_manager_name_next"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_action_next_item" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_detail_task_manager_tel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:clickable="true"
        android:minHeight="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_task_manager_tel" />


        <TextView
            android:id="@+id/fragment_detail_task_manager_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/fragment_detail_task_manager_tel_next" />


        <ImageView
            android:id="@+id/fragment_detail_task_manager_tel_next"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_next_item" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_detail_task_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fragment_detail_task_send_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_detail_task_status_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_task_status" />


        <TextView
            android:id="@+id/fragment_detail_task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/fragment_detail_task_status_edit" />

        <ImageView
            android:id="@+id/fragment_detail_task_status_edit"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_action_next_item" />
    </RelativeLayout>
</LinearLayout>
